@@ -1,87 +1,0 @@
-
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.029.
-use strict;
-use warnings;
-
-use 5.010001;
-
-use ExtUtils::MakeMaker 6.48;
-
-
-
-my %WriteMakefileArgs = (
-  "ABSTRACT" => "IO::Async support for dealing with UWSGI requests",
-  "AUTHOR" => "Tom Molesworth <cpan\@perlsite.co.uk>",
-  "CONFIGURE_REQUIRES" => {
-    "ExtUtils::MakeMaker" => "6.48"
-  },
-  "DISTNAME" => "Net-Async-UWSGI",
-  "EXE_FILES" => [],
-  "LICENSE" => "perl",
-  "MIN_PERL_VERSION" => "5.010001",
-  "NAME" => "Net::Async::UWSGI",
-  "PREREQ_PM" => {
-    "Future" => "0.30",
-    "HTTP::Response" => 0,
-    "IO::Async" => "0.62",
-    "JSON::MaybeXS" => 0,
-    "List::UtilsBy" => 0,
-    "Mixin::Event::Dispatch" => "1.006",
-    "Protocol::UWSGI" => "1.000",
-    "URI" => 0,
-    "URI::QueryParam" => 0,
-    "curry" => 0,
-    "parent" => 0
-  },
-  "TEST_REQUIRES" => {
-    "File::Spec" => 0,
-    "IO::Handle" => 0,
-    "IPC::Open3" => 0,
-    "Test::CheckDeps" => "0.010",
-    "Test::Fatal" => "0.010",
-    "Test::More" => "0.98",
-    "Test::Refcount" => "0.07"
-  },
-  "VERSION" => "0.003",
-  "test" => {
-    "TESTS" => "t/*.t"
-  }
-);
-
-
-my %FallbackPrereqs = (
-  "ExtUtils::MakeMaker" => "6.48",
-  "File::Spec" => 0,
-  "Future" => "0.30",
-  "HTTP::Response" => 0,
-  "IO::Async" => "0.62",
-  "IO::Handle" => 0,
-  "IPC::Open3" => 0,
-  "JSON::MaybeXS" => 0,
-  "List::UtilsBy" => 0,
-  "Mixin::Event::Dispatch" => "1.006",
-  "Protocol::UWSGI" => "1.000",
-  "Test::CheckDeps" => "0.010",
-  "Test::Fatal" => "0.010",
-  "Test::More" => "0.98",
-  "Test::Refcount" => "0.07",
-  "URI" => 0,
-  "URI::QueryParam" => 0,
-  "curry" => 0,
-  "parent" => 0
-);
-
-
-unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
-  delete $WriteMakefileArgs{TEST_REQUIRES};
-  delete $WriteMakefileArgs{BUILD_REQUIRES};
-  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
-}
-
-delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
-  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
-
-WriteMakefile(%WriteMakefileArgs);
-
-
-
