@@ -7,7 +7,7 @@ main_module	= lib/Net/Async/UWSGI.pm
 
 [Git::GatherDir]
 [PruneCruft]
-[PruneFiles]
+;[PruneFiles]
 ;filenames = Makefile.PL
 [ManifestSkip]
 [MetaYAML]
@@ -16,9 +16,8 @@ main_module	= lib/Net/Async/UWSGI.pm
 [MakeMaker]
 eumm_version = 6.48
 prereq_fatal = 1
-[ExecDir]
-[ShareDir]
-dir = share
+[AssertOS]
+os = -Win32
 [Manifest]
 [TestRelease]
 [ConfirmRelease]
